# gwin

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  MANIFEST.in  README.rst  conftest.py  index.html  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
docs/: Makefile  README.md  conf.py  gwin.rst  index.rst  vis.rst
docs/_includes/: distributions-table.py  waveform-parameters.py
docs/_static/css/: gwin.css
docs/_templates/autosummary/: class.rst
docs/command-line/: gwin.rst  gwin_make_inj_workflow.rst  gwin_make_workflow.rst  vis.rst
docs/io/: index.rst
docs/workflow/: gwin_inerence_inj_workflow.rst  gwin_inerence_workflow.rst
examples/workflow/GW150914_example/: calibration.ini  gwin.ini  marginalized_gwin.ini  workflow.ini
gwin/: __init__.py  _version.py  burn_in.py  likelihood.py  option_utils.py  sampler.py  sampler_base.py  sampler_emcee.py  sampler_kombine.py  sampler_mcmc.py  workflow.py
gwin/io/: __init__.py  base_mcmc.py  hdf.py
gwin/likelihood/: __init__.py  analytic.py  base.py  gaussian_noise.py
gwin/models/: __init__.py  analytic.py  base.py  gaussian_noise.py
gwin/results/: __init__.py  scatter_histograms.py
gwin/sampler/: __init__.py  base.py  emcee.py  kombine.py  mcmc.py
gwin/utils/: __init__.py  sphinx.py
test/: test_calibration.py  test_gwin.py  test_io.py  test_likelihood.py  test_models.py  test_option_utils.py  test_results.py  test_sampler.py
test/utils/: __init__.py  base.py  core.py  waveform.py
tools/: inference_test.sh
