[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[aliases]
test = pytest

[tool:pytest]
; print name of each test, print skip reasons, use gwpy/tests/ modules
addopts = --verbose -r s

[coverage:run]
source = gwin

[versioneer]
VCS = git
style = pep440
versionfile_source = gwin/_version.py
versionfile_build = gwin/_version.py
tag_prefix = v
parentdir_prefix = gwin-
